# bathat

./: .gitattributes  .gitignore  Makefile  README.md  bathat.use  common.mk  deploy.sh  run.sh
audio/: CMakeLists.txt  README.md  audiosink.h  create_ping.py  fusion.cpp  fusion.h  generate_notify.py  generate_sounds.sh  main.cpp  qsasink.cpp  qsasink.h  speech.cpp  speech.h  synth.cpp  synth.h  wavfilesink.cpp  wavfilesink.h
audio/include/: AudioManager.hpp  AudioObstacle.hpp  AudioOutput.hpp  WavAudioOutput.hpp
audio/src/: AudioManager.cpp  ConsoleAudioOutput.cpp  WavAudioOutput.cpp  main.cpp
common/: bat_ring.h  bat_ring.py  detect.py  undistort.py
depth/: depth_worker.py
src/: camera.cpp  camera.h  composite.cpp  composite.h  depthview.cpp  depthview.h  detview.cpp  detview.h  display.cpp  display.h  frameslot.cpp  frameslot.h  inferno_lut.h  main.cpp  rectview.cpp  rectview.h
tests/: Makefile  test_composite.cpp  test_depthview.cpp  test_det_ring.py  test_detect.py  test_detview.cpp  test_fusion.cpp  test_rectview.cpp  test_ring.cpp  test_ring_read.py  test_speech.cpp  test_synth.cpp  test_wavsink.cpp
tools/: calibrate.py  detfeed.py  gen_inferno_lut.py  imgcam.py  ringdump.py
undistort/: undistort_worker.py
